<resources>
    <string name="app_name">Hungry App</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="address_label">Address</string>
    <string name="min_delivery_price_label">Min. Ordering Price</string>
    <string name="min_delivery_time_label">Delivery Time</string>
    <string name="restaurant_menu_title">Restaurant Menu</string>
    <string name="on_boarding_lorem_ipsum">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Curabitur vitae neque asuv scelerisque, imperdiet magna dignissim.</string>
    <string name="on_boarding_1_title_1">Are You Hungry?</string>
    <string name="on_boarding_1_title_2">Choose from dozens of restaurants around you and place your order </string>
    <string name="on_boarding_2_title_1">Various Food Types</string>
    <string name="on_boarding_2_title_2">Chefs cook your food with care and prepare it for delivery</string>
    <string name="on_boarding_3_title_1">"Let's Order Food!"</string>
    <string name="on_boarding_3_title_2">Enjoy Your Meal With Hungry App!</string>
    <string name="button_next">Next</string>
    <string name="button_start">Start</string>
    <string name="imageholder_URL">https://cdn.friendlystock.com/wp-content/uploads/2019/12/4-special-pizza-cartoon-clipart.jpg</string>
    <string name="hint_email">Email Address</string>
    <string name="hint_password">Password</string>
    <string name="edit_profile_str">Edit Profile</string>
    <string name="button_login">Login</string>
    <string name="label_register">"Don't have an account?"</string>
    <string name="button_register">Sign Up</string>
    <string name="hint_name">Name</string>
    <string name="hint_surname">Surname</string>
    <string name="hint_phone_number">Phone Number</string>
    <string name="hint_current_password">Current Password</string>
    <string name="hint_new_password">New Password</string>
    <string name="hint_confirm_new_password">Confirm New Password</string>
    <string name="hint_address_title">Address Title</string>
    <string name="hint_city">City</string>
    <string name="hint_district">District</string>
    <string name="hint_address_detail">Address Detail</string>
    <string name="button_add_address">Add Address</string>
    <string name="button_update_password">Update Password</string>
    <string name="button_change_password">Change Password</string>
    <string name="button_update_profile">Update Profile</string>
    <string name="button_order_history">Order History</string>
    <string name="button_my_addresses">My Addresses</string>
    <string name="profile_page_str">Profile Page</string>
    <string name="hint_register">Sign Up</string>
    <string name="text_profile_picture">Profile Picture</string>
    <string name="hint_profile_picture_url">Profile Picture URL</string>
    <string name="add_your_restaurant_str">Add Your Restaurant</string>
    <string name="general_info_text_str">General Infos</string>
    <string name="restaurant_name_str">Restaurant Name</string>
    <string name="phone_number_str">Phone Number</string>
    <string name="address_info_text_str">Address Infos</string>
    <string name="city_str">District</string>
    <string name="county_str">City</string>
    <string name="name_surname_str">Name Surname</string>
    <string name="address_detail_str">Address Details</string>
    <string name="has_restaurant_str">Are you a restaurant owner?&#160;&#160;</string>
    <string name="save_restaurant">Add a Restaurant</string>
    <string name="restaurant_name">Restaurant Name</string>
    <string name="welcome_str">Welcome</string>
    <string name="welcome_to_str">Welcome To Hungry App!</string>
    <string name="loading_str">Loading…</string>
</resources>