<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
        android:background="@color/orange_secondary"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.home.HomeFragment">

    <!-- TODO: Update blank fragment layout -->
    <!--<Button
        android:id="@+id/btnDetail"
        android:text="Restoran Click"
        android:textAllCaps="false"
        android:backgroundTint="@color/teal_700"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>-->

    <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/buttonGoToProfile"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end|top"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="8dp"
            android:backgroundTint="@color/card_light_grey"
            android:src="@drawable/ic_profile"
            app:backgroundTint="@color/light_purple"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    <TextView
            android:paddingStart="20dp"
            android:textSize="24sp"
            android:text="@string/welcome_to_str"
            android:textStyle="bold"
            android:id="@+id/welcome_text"
            android:layout_width="0dp"
            android:textColor="@color/white"
            app:layout_constraintVertical_bias="0.03"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/buttonGoToProfile"
            app:layout_constraintBottom_toBottomOf="parent"/>


    <TextView

            android:paddingStart="20dp"
            android:textSize="15sp"
            android:text="@string/loading_str"
            android:id="@+id/result_text_view"
            android:layout_width="0dp"
            android:textColor="@color/light_purple"
            app:layout_constraintVertical_bias="0.01"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/buttonGoToProfile"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/welcome_text"/>


    <androidx.recyclerview.widget.RecyclerView
            android:layout_marginTop="20dp"
            android:id="@+id/restaurantRecyclerView"
            android:layout_width="match_parent"
            android:background="@drawable/rectangle_border"
            android:layout_margin="8dp"
            android:layout_height="0dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toTopOf="@+id/addRestaurantLayout"
            app:layout_constraintTop_toBottomOf="@+id/result_text_view"/>


    <LinearLayout
            app:layout_constraintVertical_bias="0.95"
            android:gravity="center"
            android:visibility="gone"
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:id="@+id/addRestaurantLayout">


        <TextView
                android:text="@string/has_restaurant_str"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

        <TextView
                android:id="@+id/save_restaurant_button"
                android:textColor="@color/color_gothic"
                android:textStyle="bold"
                android:text="@string/save_restaurant"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

    </LinearLayout>





</androidx.constraintlayout.widget.ConstraintLayout>