<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/orange_secondary"
        tools:context=".ui.edit_profile.EditProfileFragment">

    <TextView
            android:id="@+id/textView3"
            android:layout_width="103dp"
            android:textColor="@color/white"
            android:visibility="invisible"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:gravity="center"
            android:text="@string/text_profile_picture"
            android:textStyle="bold"
            app:layout_constraintBottom_toTopOf="@+id/cardView2"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.368" />

    <androidx.cardview.widget.CardView
            android:id="@+id/cardView2"
            android:layout_width="125dp"
            android:layout_height="125dp"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="568dp"
            android:backgroundTint="@color/card_light_grey"
            app:cardCornerRadius="16dp"
            app:cardElevation="16dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintHorizontal_bias="0.50"
            app:layout_constraintVertical_bias="0.169">

        <ImageView
                android:contentDescription="@string/text_profile_picture"
                android:id="@+id/EditProfileImageView"
                android:layout_width="120dp"
                android:layout_height="120dp"
                android:layout_gravity="center"
                android:src="@drawable/pizza_imageholder" />

    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
            android:layout_width="380dp"
            android:layout_height="400dp"
            app:cardCornerRadius="20dp"
            android:outlineAmbientShadowColor="@color/black"
            android:background="@color/white"
            app:layout_constraintVertical_bias="0.100"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:id="@+id/cardView5"
            app:layout_constraintTop_toBottomOf="@+id/cardView2">

        <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/white"
                tools:context=".ui.edit_profile.EditProfileFragment">


            <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/textInputLayoutName"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    app:boxStrokeColor="@color/red_light"
                    app:hintTextColor="@color/red_light"
                    android:layout_margin="16dp"
                    android:hint="@string/hint_name"
                    app:boxCornerRadiusTopStart="30dp"
                    app:boxCornerRadiusTopEnd="30dp"
                    app:boxCornerRadiusBottomStart="30dp"
                    app:boxCornerRadiusBottomEnd="30dp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintVertical_bias="0.0"
                    app:layout_constraintTop_toTopOf="parent">

                <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/textInputEditName"
                        android:inputType="text"
                        tools:text="Name"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/textInputLayoutSurname"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_margin="16dp"
                    android:hint="@string/hint_surname"
                    app:boxStrokeColor="@color/red_light"
                    app:hintTextColor="@color/red_light"
                    app:boxCornerRadiusTopStart="30dp"
                    app:boxCornerRadiusTopEnd="30dp"
                    app:boxCornerRadiusBottomStart="30dp"
                    app:boxCornerRadiusBottomEnd="30dp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.75"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/textInputLayoutName"
                    app:layout_constraintVertical_bias="0.0">

                <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/textInputEditSurname"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:inputType="text"
                        tools:text="Surname" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/textInputLayoutEmail"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    app:boxStrokeColor="@color/red_light"
                    app:hintTextColor="@color/red_light"
                    android:layout_margin="16dp"
                    android:hint="@string/hint_email"
                    app:boxCornerRadiusTopStart="30dp"
                    app:boxCornerRadiusTopEnd="30dp"
                    app:boxCornerRadiusBottomStart="30dp"
                    app:boxCornerRadiusBottomEnd="30dp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.75"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/textInputLayoutSurname"
                    app:layout_constraintVertical_bias="0.0">

                <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/textInputEditEmail"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:inputType="textEmailAddress"
                        tools:text="mail@mail.com" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/textInputLayoutPhone"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_margin="16dp"
                    android:hint="@string/phone_number_str"
                    app:boxStrokeColor="@color/red_light"
                    app:hintTextColor="@color/red_light"
                    app:boxCornerRadiusTopStart="30dp"
                    app:boxCornerRadiusTopEnd="30dp"
                    app:boxCornerRadiusBottomStart="30dp"
                    app:boxCornerRadiusBottomEnd="30dp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.75"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/textInputLayoutEmail"
                    app:layout_constraintVertical_bias="0.0">

                <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/textInputEditPhone"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:inputType="phone"
                        tools:text="05123456789" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/textInputLayoutPPURL"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_margin="16dp"
                    android:hint="@string/hint_profile_picture_url"
                    app:boxStrokeColor="@color/red_light"
                    app:hintTextColor="@color/red_light"
                    app:boxCornerRadiusTopStart="30dp"
                    app:boxCornerRadiusTopEnd="30dp"
                    app:boxCornerRadiusBottomStart="30dp"
                    app:boxCornerRadiusBottomEnd="30dp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.75"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/textInputLayoutPhone"
                    app:layout_constraintVertical_bias="0.0">

                <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/textInputEditPPURL"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:inputType="text"
                        tools:text="https://www.urlurl.com" />
            </com.google.android.material.textfield.TextInputLayout>

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.cardview.widget.CardView>

    <com.google.android.material.button.MaterialButton
            android:id="@+id/buttonChangePasswordNavigation"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_margin="16dp"
            android:backgroundTint="@color/white"
            android:text="@string/button_change_password"
            android:textAlignment="center"
            android:textAllCaps="false"
            android:textColor="@color/orange_main"
            app:icon="@drawable/ic_baseline_lock_24"
            app:cornerRadius="30dp"
            app:iconSize="24dp"
            app:iconTint="@color/red_light"
            app:iconGravity="start"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintVertical_bias="0.0"
            app:layout_constraintTop_toBottomOf="@+id/cardView5"
            app:layout_constraintHorizontal_bias="0.531" />

    <Button
            android:id="@+id/buttonUpdateProfile"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_margin="16dp"
            android:backgroundTint="@color/white"
            android:text="@string/button_update_profile"
            android:textAllCaps="false"
            android:textColor="@color/orange_main"
            app:cornerRadius="@dimen/corner_radius_30"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/buttonChangePasswordNavigation" />

</androidx.constraintlayout.widget.ConstraintLayout>